--- a/app/views/layouts/shared/_nav.html.slim
+++ b/app/views/layouts/shared/_nav.html.slim
@@ -4,9 +4,11 @@
     ul.nav.nav-pills
       - if user_signed_in?
         li.nav-item
-            li = link_to 'sign_out', destroy_user_session_path, data: { "turbo-method": :delete }
+          = link_to 'New Post', new_post_path, class: 'btn btn-primary'
+        li.nav-item
+          = link_to 'Sign Out', destroy_user_session_path, data: { "turbo-method": :delete }, class: 'nav-link link-dark'
       - else
-        li.nav-item
-              li = link_to 'sign_in', new_user_session_path
-        li.nav-item
-              li = link_to 'register', new_user_registration_path
+        li.nav-item.btn
+          = link_to 'Sign In', new_user_session_path, class: 'nav-link link-dark'
+        li.nav-item.btn
+          = link_to 'Register', new_user_registration_path, class: 'nav-link link-dark'
