--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -16,4 +16,5 @@ hr
 
 .d-flex
   = link_to 'Edit', edit_post_path(@post), class: 'btn btn-outline-primary me-2'
+  = link_to 'Delete', post_path(@post), class: 'btn btn-outline-danger me-2', data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'}
   = link_to 'Back', :back, class: 'btn btn-outline-primary'
