--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,6 +1,6 @@
 h1 Posts
 
-- @posts.each_with_index do |post, i|
+- @posts.each_with_index do |post, _i|
   .card.mb-2
     .card-body
       h5.card-title = link_to post.title, post
