--- a/app/views/layouts/shared/_nav.html.slim
+++ b/app/views/layouts/shared/_nav.html.slim
@@ -6,7 +6,7 @@
         li.nav-item
           = link_to 'New Post', new_post_path, class: 'btn btn-primary'
         li.nav-item
-          = link_to 'Sign Out', destroy_user_session_path, data: { "turbo-method": :delete }, class: 'nav-link link-dark'
+          = link_to 'Sign Out', destroy_user_session_path, data: { 'turbo-method': :delete }, class: 'nav-link link-dark'
       - else
         li.nav-item.btn
           = link_to 'Sign In', new_user_session_path, class: 'nav-link link-dark'
