--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -1,12 +1,12 @@
-= content_for :title do
+h1
   = @post.title
 p
   strong.me-2 Description:
   = @post.body
 
-/ p
-/   strong.me-2 User:
-/   = @post.user.name
+p
+  strong.me-2 Creator:
+  = @post.creator.email
 
 p
   strong.me-2 Status:
@@ -16,5 +16,7 @@ hr
 
 .d-flex
   = link_to 'Edit', edit_post_path(@post), class: 'btn btn-outline-primary me-2'
-  = link_to 'Delete', post_path(@post), class: 'btn btn-outline-danger me-2', data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'}
+  = link_to 'Delete', post_path(@post),
+    class: 'btn btn-outline-danger me-2',
+    data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }
   = link_to 'Back', :back, class: 'btn btn-outline-primary'
