add nested comments

--- a/app/views/posts/comments/_form.html.slim
+++ b/app/views/posts/comments/_form.html.slim
@@ -1,7 +1,10 @@
-= simple_form_for(comment) do |f|
+= simple_form_for @comment, url: url do |f|
   = f.error_notification
   = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
 
+  - if defined?(parent_id)
+      = f.hidden_field :parent_id, value: parent_id
+
   = f.input :content
 
-  = f.button :submit, class: 'btn btn-success mt-4 btn-block'
+  = f.button :submit, class: 'btn btn-success mt-4 mb-3 btn-block'
