--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -18,29 +18,23 @@ hr
   - if @post.comments.any?
     h4 Comments
 
-    table.table.mb-5
-      thead
-        tr
-          th{ scope = 'col' } #
-          th{ scope = 'col' } Content
-          th
-      tbody
-      - @post.comments.each_with_index do |comment, i|
-        - if comment.id
-          tr
-            th{ scope = 'row' } = i + 1
-            td = comment.content
-            td.d-flex.justify-content-end
-              = link_to 'Edit', edit_post_comment_path(@post, comment), class: 'btn btn-outline-primary me-2'
-              = link_to 'Delete', post_comment_path(@post, comment),
-                data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' },
-                class: 'btn btn-outline-danger me-2'
+    - if user_signed_in?
+      = render 'posts/comments/form', url: post_comments_path(@post), post: @post, comment: @post.comments.build
 
-= simple_form_for @comment, url: post_comments_path(@post) do |f|
-  = f.input :content, label: 'Add your comment:'
-  = f.submit class: 'btn btn-primary mt-3'
-
-hr
+    - if @post.comments.roots.any?
+      - @post.comments.roots.each do |post_comment|
+        .card.mb-3
+          .card-body
+            = post_comment.content
+            - if post_comment.has_children?
+              - post_comment.children.each do |child_comment|
+                = render 'posts/comments/comment', post_comment: child_comment
+          .card-footer
+            a.d-block.small.text-muted[data-bs-toggle="collapse" href="#new-post-comment-#{post_comment.id}"]
+              = 'Answer'
+            .collapse[data-bs-target="#new-post-comment-#{post_comment.id}" id="new-post-comment-#{post_comment.id}"]
+              - if user_signed_in?
+                = render 'posts/comments/form', url: post_comments_path(@post), post: @post, comment: @post.comments.build, parent_id: post_comment.id
 
 .d-flex
   = link_to 'Edit', edit_post_path(@post), class: 'btn btn-outline-primary me-2'
