--- a/app/views/posts/new.html.slim
+++ b/app/views/posts/new.html.slim
@@ -1,8 +1,8 @@
 = content_for :title do
-  = 'New post'
+  = t('.title')
 
 == render 'form', post: @post
 
 hr
 
-= link_to 'Back', :back, class: 'btn btn-outline-primary'
+= link_to t('back'), :back, class: 'btn btn-outline-primary'
