--- a/app/views/layouts/shared/_nav.html.slim
+++ b/app/views/layouts/shared/_nav.html.slim
@@ -1,14 +1,15 @@
 .container
   header.d-flex.flex-wrap.align-items-center.justify-content-center.justify-content-md-between.py-3.mb-4.border-bottom
-    a.d-flex.align-items-center.mb-2.mb-md-0.me-5.text-dark.text-decoration-none.fs-4(href="/") = 'Collective blog'
+    = link_to root_path, class: 'text-dark text-decoration-none fs-4' do
+      = t('.title')
     ul.nav.nav-pills
       - if user_signed_in?
         li.nav-item
-          = link_to 'New Post', new_post_path, class: 'btn btn-primary'
+          = link_to t('posts.new.title'), new_post_path, class: 'btn btn-primary'
         li.nav-item
-          = link_to 'Sign Out', destroy_user_session_path, data: { 'turbo-method': :delete }, class: 'nav-link link-dark'
+          = link_to t('.sign_out'), destroy_user_session_path, data: { 'turbo-method': :delete }, class: 'nav-link link-dark'
       - else
         li.nav-item.btn
-          = link_to 'Sign In', new_user_session_path, class: 'nav-link link-dark'
+          = link_to t('.sign_in'), new_user_session_path, class: 'nav-link link-dark'
         li.nav-item.btn
-          = link_to 'Register', new_user_registration_path, class: 'nav-link link-dark'
+          = link_to t('.register'), new_user_registration_path, class: 'nav-link link-dark'
